Fix styling for the application container
The application container was not centered on the webpage and the items on the container not properly aligned. With a few css style features the container is cenetred, the contents are well positioned and the signup button is well positioned.

--- a/style.css
+++ b/style.css
@@ -160,21 +160,20 @@ photo {
 
 .application {
    display: flex;
-   width: 600px;
-   height: 100px;
+   width: 800px;
+   /*height: 100px;*/
    justify-content: center;
    align-content: center;
+   margin: auto;
 }
 .txt {
     color: white;
     font-size: 24px;
     font-weight: bold;
-    margin-left: 45px;
 }
 .txt2 {
     color: whitesmoke;
     font-size: 18px;
-    margin-left: 45px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -195,12 +194,12 @@ photo {
     flex-direction: column;
     padding: 16px;
     justify-content: center;
+    width: 500px;
 }
 .application {
     background-color: royalblue;
     color: white;
-    width: auto;
-    height: 100px;
+   /* height: 100px;*/
     border: 4px solid royalblue;
     border-width: 5px;
     border-radius: 5px;
@@ -209,7 +208,6 @@ photo {
 .txt {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
     align-items: center;
 }
 
@@ -217,6 +215,8 @@ photo {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 12px;
+    align-self: center;
 
 }
 .footer {
@@ -228,11 +228,11 @@ photo {
     font-size: 16px;
     position: fixed;
     width: 100%;
-    flex-shrink: 0;
     flex: 1;
     bottom: 0;
     margin-top: auto;
     padding: 0;
+    /*height: 75px;*/
 
 
 }
